--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.2"
+    "react-native": "0.64.2",
+    "react-native-maps": "^0.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
